<resources>
    <string name="app_name">Coach Info Malawi</string>
    <string name="buses">Buses</string>
    <string name="departures">Departures</string>
    <string name="fares">Fares</string>
    <string name="Depots">Depots</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coach_info_mw">COACH INFO MW</string>
    <string name="travel_malawi_in_style">Travel Malawi in Style…</string>
    <string name="image">Image</string>
    <string name="select_coach_service">Select Coach Service</string>
    <string name="axa">AXA</string>
    <string name="kwezy">KWEZY</string>
    <string name="national_n_bus">NATIONAL \n BUS</string>
    <string name="post">POST</string>
    <string name="sososo">SOSOSO</string>
    <string name="departure_times">Departure Times</string>
    <string name="mzuzu">Mzuzu</string>
    <string name="_07_00">07:00</string>
    <string name="_18_00">18:00</string>
    <string name="lilongwe">Lilongwe</string>
    <string name="_16_30">16:30</string>
    <string name="blantyre">Blantyre</string>
    <string name="_07_30">07:30</string>
    <string name="_13_00">13:00</string>
    <string name="_16_00">16:00</string>
    <string name="national_bus_2">NATIONAL BUS</string>
    <string name="_06_30">06:30</string>
    <string name="_06_45">06:45</string>
    <string name="_15_30">15:30</string>
    <string name="_15_45">15:45</string>
    <string name="post_corporation">POST CORPORATION</string>
    <string name="_18_30">18:30</string>
    <string name="_12_00">12:00</string>
    <string name="_13_30">13:30</string>
    <string name="bus_depots">Bus Depots</string>
    <string name="mzuzu_northend_mall">Mzuzu - Northend Mall</string>
    <string name="city_mall">Lilongwe - City Mall</string>
    <string name="axa_house">Blantyre - Axa House</string>
    <string name="kasungu_kasungu_inn">Kasungu - Kasungu Inn</string>
    <string name="lilongwe_bicc_7_11_city_mall">Lilongwe - BICC, 7/11, City Mall</string>
    <string name="chikoma_house">Mzuzu - Chikoma House</string>
    <string name="lilongwe_gateway_mall">Lilongwe - Gateway Mall</string>
    <string name="blantyre_ex_shire_bus_lines">Blantyre - Ex Shire Bus lines</string>
    <string name="blantyre_golden_peacock_hotel_celcom">Blantyre - Golden Peacock Hotel, Celcom</string>
    <string name="mzuzu_mzuzu_post_office">Mzuzu - Mzuzu Post Office</string>
    <string name="lilongwe_area_3_ziboliboli">Lilongwe - Area 3 (Ziboliboli)</string>
    <string name="blantyre_blantyre_post_office_opposite_kabula_filling_station">Blantyre - Blantyre Post Office (opposite Kabula filling station)</string>
    <string name="mzuzu_dry_cleaners_building">Mzuzu - Dry Cleaners\' Building</string>
    <string name="lilongwe_game_complex">Lilongwe - Game Complex</string>
    <string name="blantyre_petroda_filling_station_near_clock_tower">Blantyre - Petroda Filling Station near Clock Tower</string>
    <string name="coach_info_n_mw">COACH INFO\n MW</string>
    <string name="title_activity_axa">AxaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="offices">Offices</string>
    <string name="axa_house_chichiri_next_to_shoprite_complex">Blantyre - Axa House, Chichiri next to Shoprite Complex</string>
    <string name="in_addition_ticket_sales_agents_in_the_following_areas_ntcheu_dedza_kasungu_nkhamenya_jenda_mzimba_and_karonga">In addition, ticket sales agents in the following areas: Ntcheu, Dedza, Kasungu, Nkhamenya, Jenda, Mzimba and Karonga.</string>
    <string name="not_available">Not available</string>
    <string name="mzuzu_07_00_18_00_northend_mall">Mzuzu - 07:00, 18:00 (Northend Mall)</string>
    <string name="blantyre_07_00_chichiri_next_to_shoprite_complex_n_07_30_axa_house_near_blantyre_post_office">Blantyre - 07:00, 16:30, 18:00 (Chichiri next to Shoprite Complex)\n - 07:30, 16:30, 18:00  (Axa house near Blantyre post office)</string>
    <string name="blantyre_07_00_16_30_18_00_chichiri_next_to_shoprite_complex_n_07_30_16_30_18_00_axa_house_near_blantyre_post_office">Blantyre - 07:00, 16:30, 18:00 (Chichiri next to Shoprite Complex)\n - 07:30, 16:30, 18:00 (Axa house near Blantyre post office)</string>
    <string name="lilongwe_07_00_16_30_city_mall">Lilongwe - 07:00, 16:30 (City Mall)</string>
    <string name="contacts">Contacts</string>
    <string name="mzuzu_265_211_95_7164">Mzuzu - +265 211 95 7164</string>
    <string name="lilongwe_265_212_24_5245">Lilongwe - +265 212 24 5245</string>
    <string name="blantyre_265_997_71_0045">Blantyre - +265 997 71 0045</string>
    <string name="mzuzu_chikoma_house">Mzuzu - Chikoma House</string>
    <string name="blantyre_ex_shire_buslines_premises">Blantyre - ex-shire buslines premises</string>
    <string name="mzuzu_to_kasungu_n_mwk_13000_single_ticket_n_mwk_24000_return_ticket">Mzuzu to Kasungu \n - MWK 13000 (Single ticket)\n - MWK 24000 (Return ticket)</string>
    <string name="mzuzu_to_lilongwe_n_mwk_20000_single_ticket_n_mwk_35000_return_ticket">Mzuzu to Lilongwe\n - MWK 20000 (Single ticket)\n - MWK 35000 (Return ticket)</string>
    <string name="lilongwe_to_kasungu_n_mwk_13000_single_ticket_n_mwk_24000_return_ticket">Lilongwe to Kasungu\n - MWK 13000 (Single ticket)\n - MWK 24000 (Return ticket)</string>
    <string name="lilongwe_to_blantyre_n_mwk_20000_single_ticket_n_mwk_35000_return_ticket">Lilongwe to Blantyre\n - MWK 20000 (Single ticket)\n - MWK 35000 (Return ticket)</string>
    <string name="blantyre_to_kasungu_n_mwk_24000_single_ticket_n_mwk_45000_return_ticket">Blantyre to Kasungu\n - MWK 24000 (Single ticket)\n - MWK 45000 (Return ticket)</string>
    <string name="blantyre_to_mzuzu_n_mwk_32500_single_ticket_n_mwk_60000_return_ticket">Blantyre to Mzuzu\n - MWK 32500 (Single Ticket)\n - MWK 60000 (Return ticket)</string>
    <string name="mzuzu_07_30_dry_cleaners_building">Mzuzu - 07:30 (Dry Cleaners building)</string>
    <string name="mzuzu_07_30_chikoma_house">Mzuzu - 07:30 (Chikoma House)</string>
    <string name="kasungu_10_30_15_00_kasungu_inn">Kasungu - 10:30, 15:00 (kasungu Inn)</string>
    <string name="lilongwe_07_00_13_00_16_00_gateway_mall">Lilongwe - 07:00, 13:00, 16:00 (Gateway Mall)</string>
    <string name="blantyre_07_30_13_00_16_00_ex_shire_buslines">Blantyre - 07:30, 13:00, 16:00 (Ex Shire buslines)</string>
    <string name="mzuzu_0882946650">Mzuzu - 0882946650</string>
    <string name="lilongwe_0886780356">Lilongwe - 0886780356</string>
    <string name="blantyre_0886780356">Blantyre - 0886780356</string>
    <string name="blantyre_golden_peacock_celcom">Blantyre - Golden Peacock, Celcom</string>
    <string name="lilongwe_to_blantyre_n_mwk_20000">Lilongwe to Blantyre\n - MWK 20000</string>
    <string name="blantyre_to_lilongwe_n_mwk_20000">Blantyre to Lilongwe\n - MWK 20000</string>
    <string name="lilongwe_06_30_bicc_06_45_7_11_07_00_city_mall">Lilongwe - 06:30, 15:30 (BICC), 06:45, 15:45 (7/11), 16:00 (City Mall)</string>
    <string name="blantyre_06_30_15_30_golden_peacock_hotel_07_00_16_00_celcom">Blantyre - 06:30, 15:30 (Golden Peacock Hotel), 07:00, 16:00 (Celcom)</string>
    <string name="lilongwe_265_884_821_098">Lilongwe - +265 884 821 098</string>
    <string name="blantyre_265_999_910_170">Blantyre - +265 999 910 170</string>
    <string name="p_o_box_30776_n_chichiri_blantyre_3">P.O. Box 30776,\n Chichiri, Blantyre 3</string>
    <string name="mzuzu_07_30_18_30_mzuzu_post_office">Mzuzu - 07:30, 18:30 (Mzuzu post office)</string>
    <string name="lilongwe_07_30_18_30_area_3_ziboliboli">Lilongwe - 07:30, 18:30 (Area 3 (ziboliboli)</string>
    <string name="blantyre_07_30_18_30_blantyre_post_office">Blantyre - 07:30, 18:30 (Blantyre post office)</string>
    <string name="blantyre_0994_168_158">Blantyre - 0994 168 158</string>
    <string name="lilongwe_0994_168_158">Lilongwe - 0994 168 158</string>
    <string name="mzuzu_0994_168_154">Mzuzu - 0994 168 154</string>
    <string name="email_postcoaches_malawiposts_com">Email: postcoaches@malawiposts.com</string>
    <string name="mzuzu_dry_cleaners_building_n_opposite_st_andrews_ccap">Mzuzu - Dry Cleaners building \n opposite St Andrews CCAP</string>
    <string name="blantyre_petroda_fillingstation_n_near_clock_tower">Blantyre - Petroda fillingstation \n near clock tower</string>
    <string name="mzuzu_to_lilonwe_n_mwk_18000">Mzuzu to Lilonwe\n - MWK 18000</string>
    <string name="mzuzu_blantyre_n_mwk_26000">Mzuzu - Blantyre\n - MWK 26000</string>
    <string name="lilongwe_to_blantyre_n_mwk_18000">Lilongwe to Blantyre\n - MWK 18000</string>
    <string name="lilongwe_to_mzuzu_n_mwk_18000">Lilongwe to Mzuzu\n - MWK 18000</string>
    <string name="blantyre_to_mzuzu_n_mwk_26000">Blantyre to Mzuzu\n - MWK 26000</string>
    <string name="blantyre_to_lilongwe_n_mwk_18000">Blantyre to Lilongwe\n - MWK 18000</string>
    <string name="mzuzu_07_00_12_00_dry_cleaners_building">Mzuzu - 07:00, 12:00 (Dry Cleaners building)</string>
    <string name="lilongwe_07_00_12_00_13_00_game_complex">Lilongwe - 07:00, 12:00, 13:00 (Game Complex)</string>
    <string name="blantyre_07_00_13_00_petroda_fillingstation_near_clock_tower">Blantyre - 07:00, 13:00 (Petroda fillingstation near Clock tower)</string>
    <string name="mzuzu_0888_337_172">Mzuzu - 0888 337 172</string>
    <string name="lilongwe_0888_711_714_0993_412_606_0882_709_006">Lilongwe - 0888 711 714 \n 0993 412 606 \n 0882 709 006</string>
    <string name="blantyre_0994_193_745">Blantyre - 0994 193 745</string>
</resources>